--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.18",
+    "crossfilter": "^1.3.12",
     "vue": "^2.5.2"
   },
   "devDependencies": {
