--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@statnett/vue-plotly": "^0.2.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.18",
     "crossfilter": "^1.3.12",
+    "plotly.js": "^1.47.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
